1999-11-17  Iain Holmes  <ih@csd.abdn.ac.uk>

	* gnomelib-init.h: Removed gnomelib_init.

	* gnome10-compat.[ch]: Added gnomelib_init as a function to pass fake
	arguments to gnome_program_init.

1999-11-16  Elliot Lee  <sopwith@redhat.com>

	* gnome-url.[ch]: Add a callback for history maintainance.

1999-11-15  Elliot Lee  <sopwith@redhat.com>

	* gnomelib-init2.[ch]: Add gnome_program_module_load() (Dynamic module loading from --load-modules, $GNOME_MODULES).

1999-11-11  Jacob Berkman  <jberkman@andrew.cmu.edu>

	        * gnome-config.c (gnome_config_make_vector): correctly
	        handle the "a \b c" case (escaped character between 2
	        spaces)
	        (gnome_config_make_vector): george also suggested this
	        fix

	        Fixes bug #3475	

1999-11-09  Elliot Lee  <sopwith@redhat.com>

	* Makefile.am: Link libgnome to $(LIBGNOME_LIBS), not $(GLIB_LIBS).

	* gnome-i18n.c: Add a comment about implementation behaviour.
	* gnome-moz-remote2.c: Finish implementation of new gnome-moz-remote
	* gnome-url.[ch]: Support new API with GnomeURLDisplayContext's, change gnome_url_show to just use this.
	* gnome-util.[ch]: Add a "help" file domain, for looking up help files.
	* gnome10-compat.[ch]: No change, stupid CVS.
	* libgnome{,10compat}.h: Move gnome-help into 1.0 compat library.
	* gnomelib-init2.c: Don't free the popt context unless that is specifically requested - programs need a sane way
	to get to the args.

1999-11-05  Havoc Pennington  <hp@pobox.com>

	* gnome-util.h: Include gnome-defs.h

1999-10-30  Dick Porter <dick@acm.org>

	* Allow gnome-moz-remote to launch a netscape as a last resort, if
		--remote cant find a running one.

1999-10-27  Elliot Lee  <sopwith@redhat.com>

	* gnomelib-init.h: Add attributes for application prefix/libdir/datadir/sysconfdir.
	* gnome-util.c: Make use of these attributes in gnome_file_locate().

	* gnome-ditem.[ch]: Add save routine, location accessors. Remove run-in-bg flag. Add check-for-changes routine.
